# ProyectoRobotica

install/: local_setup.sh  setup.sh
install/viz_package_cpp2/lib/viz_package_cpp2/: circle_control_node  viz_node
install/viz_package_cpp2/share/ament_index/resource_index/package_run_dependencies/: viz_package_cpp2
install/viz_package_cpp2/share/viz_package_cpp2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/proyecto-robotica/viz_package_cpp2/: CMakeLists.txt
